--- a/react-app/src/components/PostPage/postPage.css
+++ b/react-app/src/components/PostPage/postPage.css
@@ -5,6 +5,7 @@
 .post-container {
     box-shadow: 0px 0px 6px 3px rgb(96, 178, 189), -4px 6px 7px 2px rgba(77, 77, 77, 0.671);
     padding: 15px;
+    height: fit-content;
     border-radius: 8px;
 }
 
@@ -57,10 +58,6 @@
     border: 1px solid red;
     background-color: rgb(255, 198, 198);
 }
-
-/* .comments-container {
-    margin: auto;
-} */
 
 .comment-create {
     margin: 30px auto;
